--- a/Project List.html
+++ b/Project List.html
@@ -24,7 +24,7 @@
 	<body>
 
 		<ul>
-	  <li><a href="Home.html">Home</a></li>
+	  <li><a href="index.html">Home</a></li>
 	  <li><a class="active" href="#home">Project List</a></li>
 	  <li><a href="About Me.html">About Me</a></li>
 		</ul>
