--- a/About Me.html
+++ b/About Me.html
@@ -20,7 +20,7 @@
 	<body>
 
 		<ul>
-	  <li><a href="Home.html">Home</a></li>
+	  <li><a href="index.html">Home</a></li>
 	  <li><a href="Project List.html">Project List</a></li>
 	  <li><a class="active" href="#home">About Me</a></li>
 		</ul>
