--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	   <style>
 		.bg-1 { 
-	       background-color: #0099ff; /* Green */
+	       background-color: #0099ff;
 	        color: #ffffff;
 	  	}
 	  </style>
