--- a/knightsadventure.html
+++ b/knightsadventure.html
@@ -14,6 +14,7 @@
 
 <script>
         
+        //this is dumb
         function calculateRoute(destination){
             let coordinate = destination.split(",")
 
