--- a/garage.html
+++ b/garage.html
@@ -9,9 +9,13 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     
-            <style>
+        <style>
             .bg-1 { 
                 background-color: #ccffff;
+                color: #000000;
+            }
+            .bg-2{
+                background-color: #ff00ff;
                 color: #000000;
             }
         </style>
@@ -141,7 +145,7 @@
                 carArray[i].bill = carBill
             }
         }
-        
+
         listBox.innerHTML = ""
         displayGarage()
     }
