added hangman to website

--- a/Project List.html
+++ b/Project List.html
@@ -95,6 +95,7 @@
 					<li><a href="JSON2.html">King Search</a></li>
 					<li><a href="garage.html">Garage</a></li>
 					<li><a href="knightsadventure.html">Knight Tour (under construction)</a></li>
+					<li><a href="hangman.html">Hangman</a></li>
 				</ul>
 				<p>To return back to this page, please click the back button on your browser.</p>
 	</div>
